Fixing Mean Menu z-index issue that was preventing closing out the menu without jumping to a new page

--- a/scss/components/_meanmenu.scss
+++ b/scss/components/_meanmenu.scss
@@ -42,6 +42,7 @@ a.meanmenu-reveal {
     display: block;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 700;
+    z-index: 999;
     span {
       display: block;
       background: #222;
